<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="add_questions">Add Questions</string>
    <string name="question">Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="submit">Submit</string>
</resources>