<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz">

    <android.support.v4.widget.NestedScrollView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">


                <TextView
                    android:id="@+id/questionTxtVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFEDED"
                    android:padding="@dimen/dp_10"
                    android:text="@string/question"
                    android:textColor="#000000"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/optionACons"
                    android:layout_width="@dimen/dp_250"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_40"
                    android:onClick="checkA"
                    android:padding="@dimen/dp_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/questionTxtVw">

                    <TextView
                        android:id="@+id/optionATxtVw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkA"
                        android:padding="@dimen/dp_10"
                        android:text="@string/option_a"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/aRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:onClick="checkA"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/optionATxtVw"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/optionBCons"
                    android:layout_width="@dimen/dp_250"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:onClick="checkB"
                    android:padding="@dimen/dp_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/optionACons">

                    <TextView
                        android:id="@+id/optionBTxtVw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkB"
                        android:padding="@dimen/dp_10"
                        android:text="@string/option_b"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <RadioButton
                        android:id="@+id/bRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:onClick="checkB"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/optionBTxtVw"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/optionCCons"
                    android:layout_width="@dimen/dp_250"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:onClick="checkC"
                    android:padding="@dimen/dp_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/optionBCons">

                    <TextView
                        android:id="@+id/optionCTxtVw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkC"
                        android:padding="@dimen/dp_10"
                        android:text="@string/option_c"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <RadioButton
                        android:id="@+id/cRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:onClick="checkC"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/optionCTxtVw"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/optionDCons"
                    android:layout_width="@dimen/dp_250"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:onClick="checkD"
                    android:padding="@dimen/dp_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/optionCCons">

                    <TextView
                        android:id="@+id/optionDTxtVw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkD"
                        android:padding="@dimen/dp_10"
                        android:text="@string/option_d"
                        android:textColor="#000000"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <RadioButton
                        android:id="@+id/dRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:onClick="checkD"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/optionDTxtVw"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:onClick="submit"
                    android:padding="@dimen/dp_10"
                    android:text="@string/submit"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/optionDCons" />
            </android.support.constraint.ConstraintLayout>
        </HorizontalScrollView>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>